hw3/decafexpr/output/test/llvm/3param.llvm
; ModuleID = 'C'

declare void @print_int(i32)

define i32 @foo(i32, i32, i1) {
entry:
  store i32 1, i32* %x
  store i32 1, i32* %y
  store i1 false, i1* %z
  %3 = load i32, i32* %x
  call void @print_int(i32 %3)
  %4 = load i32, i32* %y
  call void @print_int(i32 %4)
  %5 = load i1, i1* %z
  %zexttmp = zext i1 %5 to i32
  call void @print_int(i32 %zexttmp)
  ret i32 0
}

define i32 @main() {
entry:
  %calltmp = call i32 @foo(i32 1, i32 2, i1 true)
  ret i32 0
}
